# CMake_VCPKG_CPP_template

./: CMakeLists.txt  README.md
.dev/: build.sh  configure.sh
.devcontainer/: Dockerfile  devcontainer.json
